# http-server

./: Cargo.toml  README.md  TODO
src/: args.rs  compression.rs  config.rs  handlers.rs  http.rs  lib.rs  main.rs  server.rs
src/handlers/: echo.rs  file.rs  mod.rs  root.rs  user_agent.rs
src/http/: parser.rs  types.rs
tests/: integration_tests.rs
tests/common/: mod.rs
