[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.38"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.11.0"                                # General iterator helpers
flate2 = "1.0.30"
log = "0.4.20"                                      # logging facade
env_logger = "0.11.0"                               # logging implementation

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions
tempfile = "3.10.0"                                # temporary files for testing
